# goodomain

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml
.github/workflows/: build.yml  ci.yaml  style.yml  webapp.yml
bindings/goodomain-wasm/: Cargo.toml  README.md
bindings/goodomain-wasm/src/: lib.rs
crates/goodomain/: Cargo.toml  build.rs
crates/goodomain-cli/: Cargo.toml
crates/goodomain-cli/src/: args.rs  main.rs
crates/goodomain/src/: data.rs  err.rs  lib.rs
src/: args.rs  data.rs  main.rs
web/app/: .env.example  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/app/src/: app.pcss
web/app/src/lib/components/: DarkModeSwitchButton.svelte  DomainList.svelte  TLDSearchList.svelte
web/app/src/lib/components/ui/input/: index.ts  input.svelte
web/app/src/routes/: +layout.svelte  +page.svelte
