[workspace]
members = ["bindings/*", "crates/*"]
default-members = ["crates/goodomain-cli"]
resolver = "2"

[workspace.package]
authors = ["7sDream <i@7sdre.am>"]
edition = "2021"
version = "0.1.0"
homepage = "https://github.com/7sDream/goodomain"
repository = "https://github.com/7sDream/goodomain"
readme = "README.md"
license = "GPLv3"
license-file = "LICENSE.md"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = "deny"
missing_docs = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
enum_variant_names = "allow" # because of https://github.com/rust-lang/rust-clippy/issues/10599

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
