[package]
name = "goodomain-wasm"
description = "WASM binding of goodomain library, for used in frontend"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

[lib]
name = "goodomain"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goodomain = { path = "../../crates/goodomain" }
wasm-bindgen = "0.2.91"
